--- a/src/ui/golview.ui
+++ b/src/ui/golview.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>747</width>
+    <width>949</width>
     <height>638</height>
    </rect>
   </property>
@@ -37,50 +37,65 @@
        </item>
        <item>
         <layout class="QGridLayout" name="gridLayout">
-         <item row="0" column="2">
-          <layout class="QVBoxLayout" name="verticalLayout">
+         <item row="5" column="2">
+          <layout class="QHBoxLayout" name="horizontalLayout_9">
            <item>
-            <layout class="QHBoxLayout" name="horizontalLayout_3">
-             <item>
-              <widget class="QLabel" name="label_3">
-               <property name="text">
-                <string>Nombre minimum de voisins vivants :</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QSpinBox" name="inputVoisinsMin"/>
-             </item>
-            </layout>
+            <widget class="QLabel" name="label_5">
+             <property name="text">
+              <string>Nombre de générations :</string>
+             </property>
+            </widget>
            </item>
            <item>
-            <layout class="QHBoxLayout" name="horizontalLayout_7">
-             <item>
-              <widget class="QLabel" name="label_4">
-               <property name="text">
-                <string>Nombre maximum de voisins vivants :</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QSpinBox" name="inputVoisinsMax"/>
-             </item>
-            </layout>
+            <widget class="QLabel" name="stepsLabel">
+             <property name="text">
+              <string>0  sur</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QSpinBox" name="inputSteps">
+             <property name="minimum">
+              <number>1</number>
+             </property>
+             <property name="maximum">
+              <number>2000</number>
+             </property>
+             <property name="value">
+              <number>20</number>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <spacer name="horizontalSpacer_7">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>500</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
            </item>
           </layout>
          </item>
-         <item row="5" column="0">
-          <widget class="QPushButton" name="btnRefreshTaille">
-           <property name="enabled">
-            <bool>true</bool>
+         <item row="0" column="1">
+          <spacer name="horizontalSpacer_3">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
            </property>
-           <property name="styleSheet">
-            <string notr="true"/>
+           <property name="sizeType">
+            <enum>QSizePolicy::Minimum</enum>
            </property>
-           <property name="text">
-            <string>Rafraichir les grilles</string>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>30</width>
+             <height>20</height>
+            </size>
            </property>
-          </widget>
+          </spacer>
          </item>
          <item row="0" column="0">
           <layout class="QVBoxLayout" name="verticalLayout_11">
@@ -137,7 +152,7 @@
            </item>
           </layout>
          </item>
-         <item row="0" column="3">
+         <item row="0" column="4">
           <spacer name="horizontalSpacer_4">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
@@ -147,62 +162,86 @@
            </property>
            <property name="sizeHint" stdset="0">
             <size>
-             <width>400</width>
+             <width>200</width>
              <height>20</height>
             </size>
            </property>
           </spacer>
          </item>
-         <item row="0" column="1">
-          <spacer name="horizontalSpacer_3">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
+         <item row="5" column="0">
+          <widget class="QPushButton" name="btnRefreshTaille">
+           <property name="enabled">
+            <bool>true</bool>
            </property>
-           <property name="sizeType">
-            <enum>QSizePolicy::Minimum</enum>
+           <property name="styleSheet">
+            <string notr="true"/>
            </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>30</width>
-             <height>20</height>
-            </size>
+           <property name="text">
+            <string>Rafraichir les grilles</string>
            </property>
-          </spacer>
+          </widget>
          </item>
-         <item row="5" column="2">
-          <layout class="QHBoxLayout" name="horizontalLayout_9">
+         <item row="0" column="2">
+          <layout class="QVBoxLayout" name="verticalLayout">
            <item>
-            <widget class="QLabel" name="label_5">
+            <layout class="QHBoxLayout" name="horizontalLayout_3">
+             <item>
+              <widget class="QLabel" name="label_3">
+               <property name="text">
+                <string>Nombre minimum de voisins vivants :</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QSpinBox" name="inputVoisinsMin">
+               <property name="maximum">
+                <number>8</number>
+               </property>
+               <property name="value">
+                <number>2</number>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </item>
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_7">
+             <item>
+              <widget class="QLabel" name="label_4">
+               <property name="text">
+                <string>Nombre maximum de voisins vivants :</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QSpinBox" name="inputVoisinsMax">
+               <property name="maximum">
+                <number>8</number>
+               </property>
+               <property name="value">
+                <number>3</number>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </item>
+          </layout>
+         </item>
+         <item row="0" column="3">
+          <layout class="QVBoxLayout" name="verticalLayout_3">
+           <item>
+            <widget class="QPushButton" name="btnGenRandom">
              <property name="text">
-              <string>Nombre de générations :</string>
+              <string>Génération aléatoire</string>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QSpinBox" name="inputSteps">
-             <property name="minimum">
-              <number>1</number>
-             </property>
-             <property name="maximum">
-              <number>2000</number>
-             </property>
-             <property name="value">
-              <number>20</number>
+            <widget class="QPushButton" name="pushButton_2">
+             <property name="text">
+              <string>Génération ...</string>
              </property>
             </widget>
-           </item>
-           <item>
-            <spacer name="horizontalSpacer_7">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>500</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
            </item>
           </layout>
          </item>
