--- a/src/ui/golview.ui
+++ b/src/ui/golview.ui
@@ -76,79 +76,6 @@
            </item>
           </layout>
          </item>
-         <item row="2" column="4">
-          <layout class="QHBoxLayout" name="horizontalLayout_9">
-           <item>
-            <widget class="QLabel" name="stepsLabel">
-             <property name="text">
-              <string>0  sur</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QSpinBox" name="inputSteps">
-             <property name="minimum">
-              <number>1</number>
-             </property>
-             <property name="maximum">
-              <number>2000</number>
-             </property>
-             <property name="value">
-              <number>20</number>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-         <item row="1" column="4">
-          <widget class="QLabel" name="label_5">
-           <property name="text">
-            <string>Nombre de générations :</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="2">
-           <layout class="QHBoxLayout" name="horizontalLayout_3">
-             <item>
-               <widget class="QLabel" name="label_3">
-                 <property name="text">
-                   <string>Nombre minimum de voisins vivants :</string>
-                 </property>
-               </widget>
-             </item>
-             <item>
-               <widget class="QSpinBox" name="inputVoisinsMin">
-                 <property name="maximum">
-                   <number>8</number>
-                 </property>
-                 <property name="value">
-                   <number>2</number>
-                 </property>
-               </widget>
-             </item>
-           </layout>
-         </item>
-         <item row="2" column="2">
-          <layout class="QHBoxLayout" name="horizontalLayout_7">
-           <item>
-            <widget class="QLabel" name="label_4">
-             <property name="text">
-              <string>Nombre maximum de voisins vivants :</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QSpinBox" name="inputVoisinsMax">
-             <property name="maximum">
-              <number>8</number>
-             </property>
-             <property name="value">
-              <number>3</number>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
          <item row="1" column="3">
           <spacer name="horizontalSpacer_4">
            <property name="orientation">
@@ -175,7 +102,80 @@
            </property>
           </spacer>
          </item>
+         <item row="0" column="2">
+          <layout class="QHBoxLayout" name="horizontalLayout_3">
+           <item>
+            <widget class="QLabel" name="label_3">
+             <property name="text">
+              <string>Nombre minimum de voisins vivants :</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QSpinBox" name="inputVoisinsMin">
+             <property name="maximum">
+              <number>8</number>
+             </property>
+             <property name="value">
+              <number>2</number>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item row="1" column="2">
+          <layout class="QHBoxLayout" name="horizontalLayout_7">
+           <item>
+            <widget class="QLabel" name="label_4">
+             <property name="text">
+              <string>Nombre maximum de voisins vivants :</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QSpinBox" name="inputVoisinsMax">
+             <property name="maximum">
+              <number>8</number>
+             </property>
+             <property name="value">
+              <number>3</number>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item row="1" column="4">
+          <widget class="QPushButton" name="btnGenRandom">
+           <property name="text">
+            <string>Génération aléatoire</string>
+           </property>
+          </widget>
+         </item>
          <item row="1" column="0">
+          <layout class="QHBoxLayout" name="horizontalLayout_2">
+           <item>
+            <widget class="QLabel" name="label_6">
+             <property name="text">
+              <string>Taille des cases : </string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QSpinBox" name="inputTailleCell">
+             <property name="minimum">
+              <number>1</number>
+             </property>
+             <property name="maximum">
+              <number>100</number>
+             </property>
+             <property name="value">
+              <number>25</number>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item row="2" column="0">
           <widget class="QPushButton" name="btnRefreshTaille">
            <property name="enabled">
             <bool>true</bool>
@@ -188,10 +188,41 @@
            </property>
           </widget>
          </item>
-         <item row="2" column="0">
-          <widget class="QPushButton" name="btnGenRandom">
+         <item row="2" column="2">
+          <layout class="QHBoxLayout" name="horizontalLayout_9">
+           <item>
+            <widget class="QLabel" name="label_5">
+             <property name="text">
+              <string>Nombre de générations :</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="stepsLabel">
+             <property name="text">
+              <string>0  sur</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QSpinBox" name="inputSteps">
+             <property name="minimum">
+              <number>1</number>
+             </property>
+             <property name="maximum">
+              <number>2000</number>
+             </property>
+             <property name="value">
+              <number>20</number>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item row="2" column="4">
+          <widget class="QPushButton" name="btnReset">
            <property name="text">
-            <string>Génération aléatoire</string>
+            <string>Remise à zéro</string>
            </property>
           </widget>
          </item>
@@ -255,13 +286,6 @@
             </widget>
            </item>
           </layout>
-         </item>
-         <item>
-          <widget class="QPushButton" name="btnReset">
-           <property name="text">
-            <string>Remise à zéro</string>
-           </property>
-          </widget>
          </item>
          <item>
           <spacer name="horizontalSpacer_2">
