--- a/src/ui/wwview.ui
+++ b/src/ui/wwview.ui
@@ -84,13 +84,6 @@
            </property>
           </spacer>
          </item>
-         <item row="2" column="2">
-          <widget class="QPushButton" name="btnReset">
-           <property name="text">
-            <string>Remise à zéro</string>
-           </property>
-          </widget>
-         </item>
          <item row="0" column="2">
           <layout class="QVBoxLayout" name="verticalLayout">
            <item>
@@ -102,7 +95,7 @@
            </item>
           </layout>
          </item>
-         <item row="1" column="0">
+         <item row="2" column="0">
           <widget class="QPushButton" name="btnRefreshTaille">
            <property name="enabled">
             <bool>true</bool>
@@ -115,14 +108,31 @@
            </property>
           </widget>
          </item>
-         <item row="2" column="0">
-          <widget class="QPushButton" name="btnGenRandom">
-           <property name="text">
-            <string>Génération aléatoire</string>
-           </property>
-          </widget>
+         <item row="1" column="0">
+          <layout class="QHBoxLayout" name="horizontalLayout_3">
+           <item>
+            <widget class="QLabel" name="label_3">
+             <property name="text">
+              <string>Taille des cases :</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QSpinBox" name="inputTailleCell">
+             <property name="minimum">
+              <number>1</number>
+             </property>
+             <property name="maximum">
+              <number>100</number>
+             </property>
+             <property name="value">
+              <number>25</number>
+             </property>
+            </widget>
+           </item>
+          </layout>
          </item>
-         <item row="1" column="2">
+         <item row="2" column="2">
           <layout class="QHBoxLayout" name="horizontalLayout_9">
            <item>
             <widget class="QLabel" name="label_5">
@@ -152,6 +162,13 @@
             </widget>
            </item>
           </layout>
+         </item>
+         <item row="1" column="2">
+          <widget class="QPushButton" name="btnGenRandom">
+           <property name="text">
+            <string>Génération aléatoire</string>
+           </property>
+          </widget>
          </item>
         </layout>
        </item>
@@ -207,6 +224,13 @@
            </property>
            <property name="value">
             <number>100</number>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="btnReset">
+           <property name="text">
+            <string>Remise à zéro</string>
            </property>
           </widget>
          </item>
