--- a/src/ui/elementaireview.ui
+++ b/src/ui/elementaireview.ui
@@ -80,7 +80,7 @@
             <number>200</number>
            </property>
            <property name="value">
-            <number>23</number>
+            <number>24</number>
            </property>
           </widget>
          </item>
@@ -104,7 +104,7 @@
             <number>100</number>
            </property>
            <property name="value">
-            <number>40</number>
+            <number>25</number>
            </property>
           </widget>
          </item>
@@ -322,7 +322,7 @@
       </layout>
      </item>
      <item row="5" column="2">
-      <layout class="QHBoxLayout" name="horizontalLayout_7" stretch="0,0,1,0">
+      <layout class="QHBoxLayout" name="horizontalLayout_7" stretch="0,0,1">
        <item>
         <widget class="QLabel" name="label_3">
          <property name="text">
@@ -350,19 +350,6 @@
          </property>
         </widget>
        </item>
-       <item>
-        <spacer name="horizontalSpacer">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>500</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
       </layout>
      </item>
      <item row="5" column="0">
@@ -378,7 +365,7 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="3">
+     <item row="0" column="4">
       <layout class="QVBoxLayout" name="verticalLayout_12">
        <item>
         <widget class="QPushButton" name="btnGenRandom">
@@ -388,15 +375,18 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="bntGenSym">
+        <widget class="QPushButton" name="btnSymetrie">
+         <property name="toolTip">
+          <string>La partie supérieure gauche de la grille sera dupliquée sur le reste du tableau</string>
+         </property>
          <property name="text">
-          <string>Génération ...</string>
+          <string>Symétrie …</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
-     <item row="0" column="4">
+     <item row="0" column="3">
       <spacer name="horizontalSpacer_4">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
