--- a/src/ui/golview.ui
+++ b/src/ui/golview.ui
@@ -40,9 +40,9 @@
          <item row="0" column="4">
           <layout class="QVBoxLayout" name="verticalLayout_3">
            <item>
-            <widget class="QPushButton" name="pushButton_2">
+            <widget class="QPushButton" name="btnGenRandom">
              <property name="text">
-              <string>Génération ...</string>
+              <string>Génération aléatoire</string>
              </property>
             </widget>
            </item>
@@ -68,7 +68,7 @@
                 <number>50</number>
                </property>
                <property name="value">
-                <number>25</number>
+                <number>24</number>
                </property>
               </widget>
              </item>
@@ -144,13 +144,6 @@
            </item>
           </layout>
          </item>
-         <item row="1" column="4">
-          <widget class="QPushButton" name="btnGenRandom">
-           <property name="text">
-            <string>Génération aléatoire</string>
-           </property>
-          </widget>
-         </item>
          <item row="1" column="0">
           <layout class="QHBoxLayout" name="horizontalLayout_2">
            <item>
@@ -223,6 +216,16 @@
           <widget class="QPushButton" name="btnReset">
            <property name="text">
             <string>Remise à zéro</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="4">
+          <widget class="QPushButton" name="btnSymetrie">
+           <property name="toolTip">
+            <string>La partie supérieure gauche de la grille sera dupliquée sur le reste du tableau</string>
+           </property>
+           <property name="text">
+            <string>Symétrie …</string>
            </property>
           </widget>
          </item>
