--- a/src/ui/wwview.ui
+++ b/src/ui/wwview.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="toolTip">
+   <string>La partie supérieure gauche de la grille sera dupliquée sur le reste du tableau</string>
+  </property>
   <layout class="QHBoxLayout" name="horizontalLayout_2">
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_8">
@@ -60,7 +63,7 @@
                 <number>50</number>
                </property>
                <property name="value">
-                <number>20</number>
+                <number>24</number>
                </property>
               </widget>
              </item>
@@ -87,9 +90,9 @@
          <item row="0" column="2">
           <layout class="QVBoxLayout" name="verticalLayout">
            <item>
-            <widget class="QPushButton" name="pushButton_2">
+            <widget class="QPushButton" name="btnGenRandom">
              <property name="text">
-              <string>Génération ...</string>
+              <string>Génération aléatoire</string>
              </property>
             </widget>
            </item>
@@ -164,9 +167,9 @@
           </layout>
          </item>
          <item row="1" column="2">
-          <widget class="QPushButton" name="btnGenRandom">
+          <widget class="QPushButton" name="btnSymetrie">
            <property name="text">
-            <string>Génération aléatoire</string>
+            <string>Symétrie …</string>
            </property>
           </widget>
          </item>
